--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,15 +5,17 @@
     <title>Title</title>
 </head>
 <body>
-<p>La conexion se realiza atraves del verbo GET en /convertion/fahrenheit/{value} para convertir de celcius a fahrenheit, y GET en /convertion/celsius/{value} para convertir de fahrenheit a celcius
-    Este retorna un objeto JSON en el siguente formato {"value":valor convertdo, "type":tipo de la conversion realizada}
-</p>
+
+<h2>Covertion fahrenheit to celcius</h2>
+<p>La conexion se realiza atraves del verbo GET en /convertion/fahrenheit/{value} para convertir de celcius a fahrenheit</p>
+<p>, y GET en /convertion/celsius/{value} para convertir de fahrenheit a celcius este retorna un objeto JSON en el siguente formato </p>
+<p>{"value":valor convertdo, "type":tipo de la conversion realizada}</p>
 <div>
     <input type="text" id="number" placeholder="Number">
     <button type="button" onclick="Controller.ToCelsius()">To Celsius</button>
     <button type="button" onclick="Controller.ToFahrenheit();">To Fahrenheit</button>
     <br>
-    <label >contvertion: </label>
+    <label >convertion: </label>
     <label id="ans"></label>
 </div>
 <script type="text/javascript" src="js/Controller.js"></script>
