--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,8 +7,8 @@
 <body>
 
 <h2>Covertion fahrenheit to celcius</h2>
-<p>La conexion se realiza atraves del verbo GET en /convertion/fahrenheit/{value} para convertir de celcius a fahrenheit</p>
-<p>, y GET en /convertion/celsius/{value} para convertir de fahrenheit a celcius este retorna un objeto JSON en el siguente formato </p>
+<p>La conexion se realiza atraves del verbo GET en /convertion/fahrenheit/{value} para convertir de celcius a fahrenheit, y </p>
+<p>GET en /convertion/celsius/{value} para convertir de fahrenheit a celcius este retorna un objeto JSON en el siguente formato:</p>
 <p>{"value":valor convertdo, "type":tipo de la conversion realizada}</p>
 <div>
     <input type="text" id="number" placeholder="Number">
